<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">外业核查</string>
    <string name="sub_name">移动版</string>

    <string name="gps_position">GPS定位</string>

    <string name="gps_track">GPS轨迹记录</string>
    <string name="gps_track_view">GPS轨迹查看</string>
    <string name="gps_track_export">GPS轨迹导出</string>
    <string name="gps_track_manager">GPS轨迹管理</string>

    <string name="gps_track_start">开始轨迹记录</string>
    <string name="gps_track_stop">结束轨迹记录</string>
    <string name="gps_track_discard">取消轨迹记录</string>

    <string name="create_map_scene">新建地图</string>
    <string name="open_recent_map">打开最近地图</string>

    <string name="file_browser">文件浏览</string>
    <string name="import_raster">加载栅格</string>
    <string name="import_vector">加载矢量</string>
    <string name="layer_manager">图层管理</string>

    <string name="survey_data">数据采集</string>
    <string name="survey_edit">采集编辑</string>
    <string name="survey_draw">地图标绘</string>
    <string name="survey_data_export">采集数据导出</string>

    <string name="photo_survey">照片采集</string>
    <string name="photo_survey_gps">自动取点</string>
    <string name="photo_survey_position">地图取点</string>
    <string name="photo_survey_delete">删除照片</string>
    <string name="photo_survey_export">照片导出</string>
    <string name="photo_survey_load">照片加载</string>

    <string name="gps_position_survey">GPS取点</string>
    <string name="draw_position_survey">手动取点</string>
    <string name="free_position_survey">连续取点</string>
    <string name="undo_position_survey">回退取点</string>
    <string name="redo_position_survey">重做取点</string>
    <string name="end_position_survey">采集结束</string>

    <string name="geometry_editor">图斑编辑</string>
    <string name="attribute_editor">属性编辑</string>
    <string name="geometry_delete">删除图斑</string>

    <string name="photo_label">照片标注</string>

    <string name="search_feature">查询属性</string>
    <string name="add_label">添加标注</string>
    <string name="add_polyline">绘制线</string>
    <string name="add_polygon">绘制面</string>
    <string name="free_hand">连续绘制</string>
    <string name="label_export">用户标注导出</string>
    <string name="action_settings">更多</string>

    <string name="measure_type">测量类型</string>
    <string name="measure_distance">长度测量</string>
    <string name="measure_area">面积测量</string>
    <string name="measure_unit">测量单位</string>

    <string name="undo">回退</string>
    <string name="redo">重做</string>
    <string name="clear">清理</string>
    <string name="map_view_setting">地图设置</string>
    <string name="reset_tool">重置工具</string>
    <string name="map_exit">退出</string>
    <string name="btn_edit_apply">应用</string>
    <string name="btn_edit_discard">取消</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_settings">Settings</string>

    <string name="file_browser_text">当前文件夹：</string>

    <!--地图提示信息 -->
    <string name="layer_spatialref_null">图层没有空间参考系</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
