<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <!--<group-->
        <!--android:id="@+id/survey_data_tool_group"-->
        <!--android:visible="true">-->
    <item
        android:id="@+id/gps_position_survey"
        android:checked="true"
        android:icon="@drawable/ic_gps_fixed_24dp"
        android:orderInCategory="1"
        android:title="@string/gps_position_survey"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"
        />
    <item
        android:id="@+id/draw_position_survey"
        android:checked="true"
        android:icon="@drawable/ic_action_touch"
        android:orderInCategory="2"
        android:title="@string/draw_position_survey"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"
        />
    <item
        android:id="@+id/undo_position_survey"
        android:checked="true"
        android:icon="@drawable/ic_undo_24dp"
        android:orderInCategory="3"
        android:title="@string/undo_position_survey"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/redo_position_survey"
        android:checked="true"
        android:icon="@drawable/ic_redo_24dp"
        android:orderInCategory="4"
        android:title="@string/redo_position_survey"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/end_position_survey"
        android:checked="true"
        android:icon="@drawable/ic_action_save2"
        android:orderInCategory="5"
        android:title="@string/end_position_survey"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <!--</group>-->
</menu>