<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <!--<item-->
    <!--android:id="@+id/ab_search"-->
    <!--android:orderInCategory="50"-->
    <!--android:title="action_search"-->
    <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
    <!--app:showAsAction="always"/>-->
    <item
        android:id="@+id/search_feature"
        android:checked="true"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="50"
        android:title="@string/search_feature"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/measure_distance"
        android:icon="@drawable/ic_action_distance"
        android:orderInCategory="51"
        android:title="@string/measure_distance"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/measure_area"
        android:icon="@drawable/ic_action_area"
        android:orderInCategory="52"
        android:title="@string/measure_area"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/reset_tool"
        android:checked="true"
        android:icon="@drawable/ic_reset_tool"
        android:orderInCategory="53"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/map_view_setting"
        android:icon="@drawable/ic_settings_24dp"
        android:orderInCategory="54"
        android:title="@string/map_view_setting"
        app:showAsAction="ifRoom|withText"/>
    />
    <item
        android:id="@+id/map_exit"
        android:icon="@drawable/ic_exit_to_app_24dp"
        android:orderInCategory="55"
        android:title="@string/map_exit"
        app:showAsAction="never"/>
    <!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"/>-->
</menu>