<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/geometry_editor"
        android:checked="true"
        android:icon="@drawable/ic_border_color_24dp"
        android:orderInCategory="10"
        android:title="@string/geometry_editor"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/attribute_editor"
        android:checked="true"
        android:icon="@drawable/ic_assignment_24dp"
        android:orderInCategory="11"
        android:title="@string/attribute_editor"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/geometry_delete"
        android:checked="true"
        android:icon="@drawable/ic_clear_24dp"
        android:orderInCategory="12"
        android:title="@string/geometry_delete"
        app:showAsAction="always|withText"/>
</menu>