<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <!--<item-->
        <!--android:id="@+id/photo_survey"-->
        <!--android:orderInCategory="51"-->
        <!--android:checked="true"-->
        <!--android:icon="@drawable/ic_action_editor"-->
        <!--android:title="@string/photo_survey"-->
        <!--app:showAsAction="always"/>-->
    <!--<item-->
        <!--android:id="@+id/search_feature"-->
        <!--android:orderInCategory="52"-->
        <!--android:checked="true"-->
        <!--android:icon="@drawable/ic_action_add"-->
        <!--android:title="@string/search_feature"-->
        <!--app:showAsAction="always"/>-->
    <item
        android:id="@+id/add_label"
        android:checked="true"
        android:icon="@drawable/ic_add_label"
        android:orderInCategory="30"
        android:title="@string/add_label"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/add_polyline"
        android:icon="@drawable/ic_add_polyline"
        android:orderInCategory="31"
        android:title="@string/add_polyline"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/add_polygon"
        android:icon="@drawable/ic_add_polygon"
        android:orderInCategory="32"
        android:title="@string/add_polygon"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/free_hand"
        android:icon="@drawable/ic_gesture_24dp"
        android:orderInCategory="32"
        android:title="@string/free_hand"
        app:showAsAction="always|withText"/>
</menu>