<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <!--<group-->
    <!--android:id="@+id/photo_tool_group"-->
    <!--android:visible="false">-->
    <item
        android:id="@+id/photo_survey_gps"
        android:checked="true"
        android:icon="@drawable/ic_photo_camera_24dp"
        android:orderInCategory="20"
        android:title="@string/photo_survey_gps"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/photo_survey_position"
        android:checked="true"
        android:icon="@drawable/ic_assistant_photo_24dp"
        android:orderInCategory="21"
        android:title="@string/photo_survey_position"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/photo_survey_delete"
        android:checked="true"
        android:icon="@drawable/ic_clear_24dp"
        android:orderInCategory="22"
        android:title="@string/photo_survey_delete"
        app:showAsAction="always|withText"
        android:showAsAction="always|withText"
        tools:ignore="AppCompatResource"/>
    <!--</group>-->
</menu>